--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>The Band</title>
+  <link rel="icon" href="./assets/img/png-clipart-batman-logo-dc-comics-batman-comics-leaf.png" type="image/x-icon" />
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/fonts/themify-icons-font (1)/themify-icons/themify-icons.css">
 </head>
@@ -13,9 +14,9 @@
             <!-- Start: Nav -->
             <ul id="nav">
               <li><a href="#">Home</a></li>
-              <li><a href="#">Band</a></li>
-              <li><a href="#">Tour</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="#band">Band</a></li>
+              <li><a href="#tour">Tour</a></li>
+              <li><a href="#contact">Contact</a></li>
               <li>
                 <a href="#">
                     More
@@ -45,27 +46,27 @@
 
         <div id="content">
           <!-- About-section -->
-            <div class="content-section">
-                <h2 class="section-heading">THE BAND</h2>
+            <div id="band" class="content-section">
+                <h2 class= "section-heading">THE BAND</h2>
                 <p class="section-sub-heading">We love music</p>
                 <p class="about-text">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <div class="members-list">
-                    <div class="member-item">
+                <div class="row members-list">
+                    <div class="col col-third text-center">
                         <p class="member-name">Name</p>
                         <img src="./assets/img/bandmember.jpg" alt="" class="member-img">
                     </div>
-                    <div class="member-item">
+                    <div class="col col-third text-center">
                       <p class="member-name">Name</p>
                       <img src="./assets/img/bandmember.jpg" alt="" class="member-img">
                   </div>
-                  <div class="member-item">
+                  <div class="col col-third text-center">
                     <p class="member-name">Name</p>
                     <img src="./assets/img/bandmember.jpg" alt="" class="member-img">
                 </div>
                 </div>
               </div>
             <!-- Tour-section -->
-            <div class="tour-section">
+            <div id="tour" class="tour-section">
               <div class="content-section">
                 <h2 class="section-heading" style="color: #fff">TOUR DATES</h2>
                 <p class="section-sub-heading" style="color: #fff">Remember to book your tickets!</p>
@@ -74,32 +75,32 @@
                   <li>October <span class="sold-out">Sold out</span></li>
                   <li>November <span class="quantity">3</span></li>
                 </ul>
-                <div class="places-list">
-                  <div class="place-item">
+                <div class="row places-list">
+                  <div class="col col-third">
                     <img src="./assets/img/newyork.jpg" alt="New York" class="place-img">
                     <div class="place-body">
                       <h3 class="place-heading">New York</h3>
                       <p class="place-time">Fri 27 Nov 2016</p>
                       <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                      <a href="#" class="place-buy-btn">Buy Tickets</a>
+                      <a href="#" class="btn">Buy Tickets</a>
                     </div>
                   </div>
-                  <div class="place-item">
+                  <div class="col col-third">
                     <img src="./assets/img/paris.jpg" alt="Paris" class="place-img">
                     <div class="place-body">
                       <h3 class="place-heading">Paris</h3>
                       <p class="place-time">Sat 28 Nov 2016</p>
                       <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                      <a href="#" class="place-buy-btn">Buy Tickets</a>
+                      <a href="#" class="btn">Buy Tickets</a>
                     </div>
                   </div>
-                  <div class="place-item">
+                  <div class="col col-third">
                     <img src="./assets/img/sanfran.jpg" alt="San Francisco" class="place-img">
                     <div class="place-body">
                       <h3 class="place-heading">San Francisco</h3>
                       <p class="place-time">Sun 29 Nov 2016</p>
                       <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                      <a href="#" class="place-buy-btn">Buy Tickets</a>
+                      <a href="#" class="btn">Buy Tickets</a>
                     </div>
                   </div>
                 </div>
@@ -107,15 +108,53 @@
             </div>
 
           <!-- Contact-section -->
-          <div class="content-section">
+          <div id="contact" class="content-section">
             <h2 class="section-heading">CONTACT</h2>
             <p class="section-sub-heading">Fan? Drop a note!</p>
+
+            <div class="row contact-content">
+              <div class="col col-half contact-info">
+                  <p><i class="ti-location-pin"></i>Chicago, US</p>
+                  <p><i class="ti-mobile"></i>Phone: +00 151515</p>
+                  <p><i class="ti-email"></i>Email: mail@mail.com</p>
+              </div>
+              <div class="col col-half contact-form">
+                  <form action="">
+                    <div class="row form-group">
+                        <div class="col col-half">
+                            <input type="text" name="" id="" placeholder="Name" required class="form-control">
+                        </div>
+                        <div class="col col-half">
+                          <input type="email" name="" id="" placeholder="Email" required class="form-control">
+                      </div>
+                    </div>
+                    <div class="row form-group mt-8">
+                      <div class="col col-full ">
+                        <input type="text" name="" id="" placeholder="Message" required class="form-control">
+                    </div>
+                    </div>
+                    <input class="btn pull-right mt-16" type="submit" value="Send">
+                  </form>
+              </div>
+            </div>
+        </div>
+        <!-- Map -->
+        <div class="map-section">
+            <img src="./assets/img/map.jpg" alt="map">
         </div>
         </div>
 
 
         <div id="footer">
-
+            <div class="socials-list">
+              <a href=""><i class="ti-facebook"></i></a>
+              <a href=""><i class="ti-instagram"></i></a>
+              <a href=""><i class="ti-youtube"></i></a>
+              <a href=""><i class="ti-pinterest"></i></a>
+              <a href=""><i class="ti-twitter"></i></a>
+              <a href=""><i class="ti-linkedin"></i></a>
+            </div>
+            <p class="copyright">Powered by <a href="">w3.css</a></p>
         </div>
     </div>
 </body>
