--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <!-- Start: Nav -->
             <ul id="nav">
               <li><a href="#">Home</a></li>
-              <li><a href="#band">Band</a></li>
-              <li><a href="#tour">Tour</a></li>
+              <li><a href="#band">Info</a></li>
+              <li><a href="#tour">Cups</a></li>
               <li><a href="#contact">Contact</a></li>
               <li>
                 <a href="#">
@@ -43,69 +43,69 @@
         </div>
         <div id="slider">
             <!-- Start: Slider -->
-             <img src="./assets/img/la.jpg" style="width: 100%" alt="">
-             <h2 class="text-heading">Los Angeles</h2>
-             <div class="text-description">We had the best time playing at Venice Beach!</div>
+             <img src="./assets/img_messi/kingleo.jpg" style="width: 100%" alt="">
+             <h2 class="text-heading">Lionel Messi</h2>
+             <div class="text-description">A great career of Lionel Messi, the king of world football!</div>
             <!--End: Slider  -->
         </div>
 
         <div id="content">
           <!-- About-section -->
             <div id="band" class="content-section">
-                <h2 class= "section-heading">THE BAND</h2>
-                <p class="section-sub-heading">We love music</p>
-                <p class="about-text">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h2 class= "section-heading">GREAT OF ALL TIME </h2>
+                <p class="section-sub-heading">King of football!</p>
+                <p class="about-text">Lionel Messi is an Argentine professional footballer widely regarded as one of the greatest players of all time. Born on June 24, 1987, in Rosario, Argentina, he showed exceptional talent from a young age. At 13, he moved to Spain to join FC Barcelona's youth academy, where he developed into a global superstar. Throughout his career, Messi has won multiple Ballon d'Or awards, breaking numerous records in goals and assists. His dribbling skills, vision, and finishing ability set him apart from other players. In 2021, he joined Paris Saint-Germain after spending over two decades with Barcelona. In 2022, he led Argentina to a historic World Cup victory, solidifying his legacy as one of football’s all-time greats. He is currently playing for Intermiami.</p>
                 <div class="row members-list">
-                    <div class="col col-third text-center">
-                        <p class="member-name">Name</p>
-                        <img src="./assets/img/bandmember.jpg" alt="" class="member-img">
+                    <div class="item col col-third text-center">
+                        <p class="member-name">Lionel</p>
+                        <img src="./assets/img_messi/messi_barca.jpg" alt="" class="member-img">
                     </div>
-                    <div class="col col-third text-center">
-                      <p class="member-name">Name</p>
-                      <img src="./assets/img/bandmember.jpg" alt="" class="member-img">
+                    <div class="item col col-third text-center">
+                      <p class="member-name">Andrés</p>
+                      <img src="./assets/img_messi/messi_psg.jpg" alt="" class="member-img">
                   </div>
-                  <div class="col col-third text-center">
-                    <p class="member-name">Name</p>
-                    <img src="./assets/img/bandmember.jpg" alt="" class="member-img">
+                  <div class="item col col-third text-center">
+                    <p class="member-name">Messi</p>
+                    <img src="./assets/img_messi/messi_mia.jpg" alt="" class="member-img">
                 </div>
                 </div>
               </div>
             <!-- Tour-section -->
             <div id="tour" class="tour-section">
               <div class="content-section">
-                <h2 class="section-heading" style="color: #fff">TOUR DATES</h2>
-                <p class="section-sub-heading" style="color: #fff">Remember to book your tickets!</p>
+                <h2 class="section-heading" style="color: #fff">NATIONAL CHAMPIONS</h2>
+                <p class="section-sub-heading" style="color: #fff">Lionel Messi's greatest moments!</p>
                 <ul class="tickets-list">
                   <li>September <span class="sold-out">Sold out</span></li>
                   <li>October <span class="sold-out">Sold out</span></li>
                   <li>November <span class="quantity">3</span></li>
                 </ul>
                 <div class="row places-list">
-                  <div class="col col-third">
-                    <img src="./assets/img/newyork.jpg" alt="New York" class="place-img">
+                  <div class="item col col-third">
+                    <img src="./assets/img_messi/arg_final.png" alt="Finalissima" class="place-img">
                     <div class="place-body">
-                      <h3 class="place-heading">New York</h3>
-                      <p class="place-time">Fri 27 Nov 2016</p>
-                      <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                      <a href="#" class="btn">Buy Tickets</a>
+                      <h3 class="place-heading">Finalissima</h3>
+                      <p class="place-time">Fri 1 June 2022</p>
+                      <p class="place-desc">Won convincingly against the Italian team (3-0).</p>
+                      <a href="javascript:void(0);" class="btn">Detail</a>
                     </div>
                   </div>
-                  <div class="col col-third">
-                    <img src="./assets/img/paris.jpg" alt="Paris" class="place-img">
+                  <div class="item col col-third">
+                    <img src="./assets/img_messi/arg_wc.jpg" alt="World Cup" class="place-img">
                     <div class="place-body">
-                      <h3 class="place-heading">Paris</h3>
-                      <p class="place-time">Sat 28 Nov 2016</p>
-                      <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                      <a href="#" class="btn">Buy Tickets</a>
+                      <h3 class="place-heading">World Cup</h3>
+                      <p class="place-time">Sun 18 Dec 2022</p>
+                      <p class="place-desc">Win the best World Cup final in history (3-3).</p>
+                      <a href="javascript:void(0);" class="btn">Detail</a>
                     </div>
                   </div>
-                  <div class="col col-third">
-                    <img src="./assets/img/sanfran.jpg" alt="San Francisco" class="place-img">
+                  <div class="item col col-third">
+                    <img src="./assets/img_messi/arg_copa.png" alt="Copa America" class="place-img">
                     <div class="place-body">
-                      <h3 class="place-heading">San Francisco</h3>
-                      <p class="place-time">Sun 29 Nov 2016</p>
-                      <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                      <a href="#" class="btn">Buy Tickets</a>
+                      <h3 class="place-heading">Copa America</h3>
+                      <p class="place-time">Mon 11 July 2021</p>
+                      <p class="place-desc">Hard-fought victory over Brazil-Sampa dance (1-0).</p>
+                      <a href="javascript:void(0);" class="btn">Detail</a>
                     </div>
                   </div>
                 </div>
@@ -118,23 +118,23 @@
             <p class="section-sub-heading">Fan? Drop a note!</p>
 
             <div class="row contact-content">
-              <div class="col col-half contact-info">
-                  <p><i class="ti-location-pin"></i>Chicago, US</p>
-                  <p><i class="ti-mobile"></i>Phone: +00 151515</p>
-                  <p><i class="ti-email"></i>Email: mail@mail.com</p>
+              <div class="contact-info-item item col col-half contact-info">
+                  <p><i class="ti-location-pin"></i>Hanoi, VIE</p>
+                  <p><i class="ti-mobile"></i>Phone: +84 369 017 983</p>
+                  <p><i class="ti-email"></i>Email: iamhcl0104@mail.com</p>
               </div>
-              <div class="col col-half contact-form">
+              <div class="item col col-half contact-form">
                   <form action="">
                     <div class="row form-group">
-                        <div class="col col-half">
+                        <div class="item col col-half">
                             <input type="text" name="" id="" placeholder="Name" required class="form-control">
                         </div>
-                        <div class="col col-half">
+                        <div class="item col col-half">
                           <input type="email" name="" id="" placeholder="Email" required class="form-control">
                       </div>
                     </div>
                     <div class="row form-group mt-8">
-                      <div class="col col-full ">
+                      <div class="item col col-full ">
                         <input type="text" name="" id="" placeholder="Message" required class="form-control">
                     </div>
                     </div>
@@ -145,21 +145,21 @@
         </div>
         <!-- Map -->
         <div class="map-section">
-            <img src="./assets/img/map.jpg" alt="map">
+            <img src="./assets/img_messi/messi_19.jpg" alt="map">
         </div>
         </div>
 
 
         <div id="footer">
             <div class="socials-list">
-              <a href=""><i class="ti-facebook"></i></a>
-              <a href=""><i class="ti-instagram"></i></a>
+              <a href="https://www.facebook.com/iamHCl0104"><i class="ti-facebook"></i></a>
+              <a href="https://www.instagram.com/iamhcl/?hl=en%27"><i class="ti-instagram"></i></a>
               <a href=""><i class="ti-youtube"></i></a>
-              <a href=""><i class="ti-pinterest"></i></a>
+              <a href="https://github.com/haivip777"><i class="ti-github"></i></a>
               <a href=""><i class="ti-twitter"></i></a>
               <a href=""><i class="ti-linkedin"></i></a>
             </div>
-            <p class="copyright">Powered by <a href="">w3.css</a></p>
+            <p class="copyright">Powered by <a href="">hcl.fullstack</a></p>
         </div>
     </div>
   <script>
