--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Band</title>
+  <title>Lionel Messi</title>
   <link rel="icon" href="./assets/img/png-clipart-batman-logo-dc-comics-batman-comics-leaf.png" type="image/x-icon" />
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/responsive.css"> <!-- responsive css đặt ở dưới thì mới có tác dụng -->
